# ML-FSM

./: FSM_GNN_Colab_Example.ipynb  LICENSE  README.md  calc.py  coords.py  cos.py  fsm.py  nn_calc.py  opt.py  pixi.toml  pyproject.toml  requirements.txt  schnet_ase_calculator.py  torchmd_calc.py  utils.py
.github/workflows/: ci.yml  test.yml
data/wb97x_sharada/04_ethane_dehydrogenation/: initial.xyz
docs/source/: api.rst  conf.py  examples.rst  index.rst  installation.rst
examples/: FSM_GNN_Colab_Example.ipynb  fsm_example.py  schnet_ase_calculator.py  torchmd_calc.py
mlfsm/: __init__.py  cli.py  coords.py  cos.py  fsm_driver.py  geom.py  interp.py  mlfsm.py  opt.py  schnet_ase_calculator.py  torchmd_calc.py  utils.py
src/mlfsm/: coords.py  cos.py  interp.py
tests/: test_cli.py  test_script.py  test_smoke.py  test_stepsize.py  test_stub.py
