[project]
name = "mlfsm"
description = "python implementation of the Freezing String Method"
license = {file = "LICENSE"}
version = "0.0.1"
readme = "README.md"
keywords = []
authors = [{name = "Jonah Marks and Joe Gomes"}]
requires-python = ">=3.9,<3.13"
dependencies = [
    "numpy>=1.26",
    "ase>=3.22",
    "scipy>=1.13",
    "geometric>=1.0.0",
    "networkx>=3.0",
    "typing-extensions>=4.0"
]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64"]

[tool.pixi.dependencies]

[tool.pixi.pypi-dependencies]
mlfsm = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default"}

[tool.pixi.feature.dev.tasks]
fmt = { cmd="ruff format ." }
lint = { cmd="ruff check . --fix" }
types = { cmd="mypy" }
test = { cmd="pytest" }
all = { depends-on = ["fmt", "lint", "types", "test"] }

[tool.pixi.feature.dev.dependencies]
pytest = ">=8.3"
pytest-cov = ">=6.0"
ruff = ">=0.11"
mypy = ">=1.15"
pre-commit = ">=4.2"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "B",  # bugbear
    "D",  # pydocstyle
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "N",  # pep8-naming conventions
    "W",  # pycodestyle warnings
    "C4", # comprehensions
    "PL", # pylint
    "PT", # flake8-pytest-style
    "PIE", # misc lints
    "PYI", # flake8-pyi
    "TID", # tidy imports
    "TCH", # type-checking imports
    "RUF", # Ruff-specific rules
    "RSE", # flake8-raise
    "ICN001", # unconventional-import-alias
]
ignore = [
    "N806", # Non-lowercase variable in function
    "PLR0911", # Too many returns
    "PLR0912", # Too many branches
    "PLR0913", # Too many arguments to function call
    "PLR0914", # Too many locals
    "PLR0915", # Too many statements
    "PLR1702", # Too many nested-blocks
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"examples/fsm_example.py" = ["PLC0415", "I001"]


[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.mypy]
ignore_missing_imports = true
follow_imports = "silent"
show_error_codes = true
warn_unused_configs = true

disallow_untyped_defs = true
disallow_untyped_calls = false
check_untyped_defs = true

disallow_any_unimported = true
disallow_any_generics = true
disallow_subclassing_any = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_no_return = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--doctest-modules"
doctest_optionflags = "NORMALIZE_WHITESPACE"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]
